--- a/api/api.cabal
+++ b/api/api.cabal
@@ -22,5 +22,7 @@ library
   -- other-extensions:
   build-depends:       base >=4.11 && <4.13
                      , servant
+                     , text
+                     , aeson
   hs-source-dirs:      src
   default-language:    Haskell2010
