--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -18,12 +18,17 @@ extra-source-files:  CHANGELOG.md
 
 executable backend
   main-is:             Main.hs
-  -- other-modules:
+  other-modules:       Server
+                     , Types
   -- other-extensions:
   build-depends:       base >=4.11 && <4.13
                      , api
                      , servant-server
                      , servant
                      , mtl
+                     , text
+                     , warp
+                     , wai
+                     , wai-cors
   hs-source-dirs:      src
   default-language:    Haskell2010
