--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -22,9 +22,9 @@ executable frontend
   -- other-extensions:
   build-depends:       base >=4.11 && <4.13
                      , api
-                     , reflex
-                     , reflex-dom
-                     , jsaddle
+                     , miso
+                     , jsaddle-warp
                      , jsaddle-dom
+                     , mtl
   hs-source-dirs:      src
   default-language:    Haskell2010
