--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -20,9 +20,13 @@ executable backend
   main-is:             Main.hs
   other-modules:       Server
                      , Types
+                     , DB.Migrations
+                     , DB.Internal
+                     , DB
   -- other-extensions:
   build-depends:       base >=4.11 && <4.13
                      , api
+                     , common
                      , servant-server
                      , servant
                      , mtl
@@ -30,5 +34,6 @@ executable backend
                      , warp
                      , wai
                      , wai-cors
+                     , sqlite-simple
   hs-source-dirs:      src
   default-language:    Haskell2010
