Set trusted keys

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ env:
 
 script:
   - nix run -I nixpkgs=https://github.com/NixOS/nixpkgs-channels/archive/nixos-$NIXPKGS.tar.gz nixpkgs.haskellPackages.hlint -c hlint src
-  - nix build -I nixpkgs=https://github.com/NixOS/nixpkgs-channels/archive/nixos-$NIXPKGS.tar.gz --option binary-caches "https://masser-ebook-manager.cachix.org https://cache.nixos.org" -f ./release.nix ghc.backend ghcjs.frontend
+  - nix build -I nixpkgs=https://github.com/NixOS/nixpkgs-channels/archive/nixos-$NIXPKGS.tar.gz --option trusted-public-keys "masser-ebook-manager.cachix.org-1:mtFSkQ2MO5MvjUpulZoFKjKUIa8g8CTcdPVuJaPKS1w= cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=" --option binary-caches "https://masser-ebook-manager.cachix.org https://cache.nixos.org" -f ./release.nix ghc.backend ghcjs.frontend
