--- a/common/common.cabal
+++ b/common/common.cabal
@@ -26,5 +26,7 @@ library
                      , transformers
                      , bytestring
                      , lens
+                     , filepath
+                     , directory
   hs-source-dirs:      src
   default-language:    Haskell2010
