--- a/api/api.cabal
+++ b/api/api.cabal
@@ -27,5 +27,6 @@ library
                      , aeson
                      , common
                      , cryptonite
+                     , memory
   hs-source-dirs:      src
   default-language:    Haskell2010
