--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -23,6 +23,7 @@ executable backend
                      , DB.Migrations
                      , DB.Internal
                      , DB
+                     , DB.Users
   -- other-extensions:
   build-depends:       base >=4.11 && <4.13
                      , api
@@ -35,5 +36,8 @@ executable backend
                      , wai
                      , wai-cors
                      , sqlite-simple
+                     , cryptonite
+                     , lens
+                     , generic-lens
   hs-source-dirs:      src
   default-language:    Haskell2010
