--- a/api/api.cabal
+++ b/api/api.cabal
@@ -18,6 +18,8 @@ extra-source-files:  CHANGELOG.md
 
 library
   exposed-modules:     API
+                     , API.Users
+                     , API.Auth
                      , Data.Model.User
   -- other-modules:
   -- other-extensions:
@@ -26,5 +28,6 @@ library
                      , text
                      , aeson
                      , common
+                     , servant-auth
   hs-source-dirs:      src
   default-language:    Haskell2010
