--- a/common/common.cabal
+++ b/common/common.cabal
@@ -28,5 +28,6 @@ library
                      , lens
                      , filepath
                      , directory
+                     , profunctors
   hs-source-dirs:      src
   default-language:    Haskell2010
