--- a/api/api.cabal
+++ b/api/api.cabal
@@ -27,7 +27,7 @@ library
                      , servant
                      , text
                      , aeson
-                     , common
+                     , masse-prelude
                      , servant-auth
   hs-source-dirs:      src
   default-language:    Haskell2010
