--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -44,5 +44,7 @@ executable backend
                      , servant-auth-server
                      , jose
                      , exceptions
+                     , filepath
+                     , directory
   hs-source-dirs:      src
   default-language:    Haskell2010
