--- a/api/api.cabal
+++ b/api/api.cabal
@@ -29,5 +29,26 @@ library
                      , aeson
                      , masse-prelude
                      , servant-auth
+                     , genvalidity
+                     , QuickCheck
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+test-suite test
+  other-modules:       Test.API
+  type:                exitcode-stdio-1.0
+  main-is:             test.hs
+  default-extensions:  OverloadedStrings
+  hs-source-dirs:
+      test
+  build-depends:       base >=4.12 && <4.13
+                     , hspec
+                     , genvalidity-hspec
+                     , genvalidity-hspec-aeson
+                     , hspec-golden-aeson
+                     , QuickCheck
+                     , masse-prelude
+                     , api
+  mixins:              masse-prelude (MyPrelude as Prelude)
+                     , base (Prelude as BasePrelude)
+                     , base hiding (Prelude)
